<?php die(); ?>
Akeeba SocialLogin 4.4.3
================================================================================
~ Block uninstallation of child extensions

Akeeba SocialLogin 4.4.2
================================================================================
# [MEDIUM] Redirection after login did not work correctly

Akeeba SocialLogin 4.4.1
================================================================================
# [LOW] Joomla has changed the way we should use to uninstall obsolete extensions

Akeeba SocialLogin 4.4.0
================================================================================
- Removed Twitter integration (gh-93)

Akeeba SocialLogin 4.3.0
================================================================================
+ Joomla 4.2, PHP 7.4+ only
# [LOW] PHP Warning in Console (CLI) application

Akeeba SocialLogin 4.2.0
================================================================================
+ Discord integration
# [HIGH] Error “Form::loadForm could not load file” creating new users

Akeeba SocialLogin 4.1.0
================================================================================
+ Automatically get the redirection URL for com_users login pages
# [MEDIUM] Creating a user without bypassing the user validation does not link the user account with the social login which was used to create the account.
# [LOW] The “Bypass user validation” option was not applied

Akeeba SocialLogin 4.0.3
================================================================================
# [HIGH] PHP exception on login page / module on Joomla 4.2 if the Apple plugin is enabled

Akeeba SocialLogin 4.0.2
================================================================================
# [MEDIUM] Could not install on Joomla 4.1

Akeeba SocialLogin 4.0.1
================================================================================
# [MEDIUM] SVG images do not display on sites installed in subdirectories