@@ -9,6 +9,7 @@ defined('_JEXEC') || die;
 
 use Joomla\CMS\Extension\PluginInterface;
 use Joomla\CMS\Plugin\PluginHelper;
+use Joomla\Database\DatabaseInterface;
 use Joomla\DI\Container;
 use Joomla\DI\ServiceProviderInterface;
 use Joomla\Event\DispatcherInterface;
@@ -34,7 +35,7 @@ return new class implements ServiceProviderInterface {
 				$plugin = new Joomla\Plugin\Sociallogin\Linkedin\Extension\Plugin($subject, $config);
 
 				$plugin->setApplication(\Joomla\CMS\Factory::getApplication());
-				$plugin->setDatabase($container->get('DatabaseDriver'));
+				$plugin->setDatabase($container->get(DatabaseInterface::class));
 
 				$plugin->init();
 
